tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_impl_struct_not_trait/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Default2 is not a trait, therefore it can't be implemented
   ┌─ src/main.nr:12:10
   │
12 │     impl Default2 for Foo {
   │          --------
   │

Aborting due to 1 previous error
